Fix heatmap on small screen

--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -16,6 +16,15 @@ $ct-series-colors: (
         #a748ca
 );
 
+.heatmap-container {
+  overflow-x: scroll;
+  overflow-y: hidden;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 .ct-legend {
   position: relative !important;
   z-index: 10;
